--- a/www/index.html
+++ b/www/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="assets/style.css">
     <title>Monkey corp</title>
-    <link rel="icon" href="./assets/images/logo-mkc.png" type="image/x-icon">
+    <link rel="icon" href="assets/images/logo-mkc.png" type="image/x-icon">
 </head>
 
 <body>
     <div class="container">
         <div style="display: flex; flex-direction: row">
-            <img src="./assets/images/logo-mkc.png" alt="logo monkey corp" style="width: 100px; height: 100px">
+            <img src="assets/images/logo-mkc.png" alt="logo monkey corp" style="width: 100px; height: 100px">
             <h1>Monkey corp</h1>
         </div>
         <h2><strong>Coming Soon<span class="loading-dots"></span></strong></h2>
