--- a/www/index.html
+++ b/www/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,11 +9,19 @@
 </head>
 
 <body>
-    <div class="container">
-        <div style="display: flex; flex-direction: row">
-            <img src="assets/images/logo-mkc.png" alt="logo monkey corp" style="width: 100px; height: 100px">
-            <h1>Monkey corp</h1>
+    <header class="header">
+        <div class="navbar">
+            <p><a href="index.html">Acceuil</a></p>
+            <p><a href="contact.html">Contact</a></p>
         </div>
-        <h2><strong>Coming Soon<span class="loading-dots"></span></strong></h2>
+    </header>
+    <div class="main_div">
+        <div class="centered_div">
+            <div class="inline_container">
+                <img class="main_image " src="assets/images/logo-mkc.png" alt="logo monkey corp">
+                <h1>Monkey corp</h1>
+            </div>
+            <h2><strong>Coming Soon<span class="loading-dots"></span></strong></h2>
+        </div>
     </div>
 </body>
