clear home page

--- a/www/index.html
+++ b/www/index.html
@@ -9,12 +9,6 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="navbar">
-            <p><a href="index.html">Acceuil</a></p>
-            <p><a href="contact.html">Contact</a></p>
-        </div>
-    </header>
     <div class="main_div">
         <div class="centered_div">
             <div class="inline_container">
@@ -23,5 +17,9 @@
             </div>
             <h2><strong>Coming Soon<span class="loading-dots"></span></strong></h2>
         </div>
+    </div>
+    <div class="footer">
+        <p>© 2021 Monkey Corp. All rights reserved. contact au <a href="mailto:contact@monkeycorp.fr">contact@monkeycorp.fr</a></p>
+        <p>Designed by Monkey corp</p>
     </div>
 </body>
