--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,11 @@
             </div>
             <h2><strong>Coming Soon<span class="loading-dots"></span></strong></h2>
         </div>
-    </div>
-    <div class="footer">
-        <p>© 2024 Monkey Corp. All rights reserved. contact au <a href="mailto:contact@monkeycorp.fr">contact@monkeycorp.fr</a></p>
-        <p>Designed by Monkey corp</p>
+        <div class="footer">
+            <div class="centered_div">
+                <p>© 2024 Monkey Corp. All rights reserved. <a href="mailto:contact@monkeycorp.fr">contact@monkeycorp.fr</a></p>
+            </div>
+            <p>Designed by Monkey corp</p>
+        </div>
     </div>
 </body>
